--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -34,6 +34,33 @@
         width: 100%;
         object-fit: contain;
       }
+      .ratioImage {
+        position: relative;
+        padding-bottom: 120%;
+        // -webkit-mask-image: radial-gradient(
+        //   ellipse 90% 90% at 50% 50%,
+        //   black 10%,
+        //   transparent 50%
+        // );
+        mask-image: radial-gradient(ellipse 90% 90% at 50% 50%, black 45%, transparent 56%);
+
+        // &:after {
+        //   position: absolute;
+        //   content: '';
+        //   top: 0;
+        //   left: 0;
+        //   width: 100%;
+        //   height: 100%;
+        //   z-index: 1;
+        //   background:radial-gradient(ellipse 90% 90% at 50% 50%, black 45%, transparent 56%);
+        // }
+
+        & > div {
+          position: absolute !important;
+          width: 100% !important;
+          height: 100% !important;
+        }
+      }
     }
   }
   .autoContainer {
@@ -463,7 +490,7 @@
         padding-bottom: 125%;
       }
       &:after {
-        content: "";
+        content: '';
         width: 100%;
         height: 100%;
         background: linear-gradient(
@@ -535,7 +562,7 @@
   position: relative;
   padding: 50px 0 0;
   &::after {
-    content: "";
+    content: '';
     width: 100%;
     height: 50%;
     background: $primary-3;
