--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -42,7 +42,11 @@
         //   black 10%,
         //   transparent 50%
         // );
-        mask-image: radial-gradient(ellipse 90% 90% at 50% 50%, black 45%, transparent 56%);
+        mask-image: radial-gradient(
+          ellipse 90% 90% at 50% 50%,
+          black 45%,
+          transparent 56%
+        );
 
         // &:after {
         //   position: absolute;
@@ -74,9 +78,10 @@
       top: -64%;
     }
     &__bubble {
-      right: 0;
-      top: 0;
+      right: 5%;
+      top: 50%;
       transform: translate(40%, -13%);
+      opacity: 0.16;
     }
   }
 }
@@ -119,11 +124,10 @@
   }
   .bg {
     &__bubble {
-      background: $primary;
-      right: 0;
-      bottom: 0;
-      transform: translate(20%, 20%);
-      opacity: 0.04;
+      color: $primary;
+      top: 0;
+      right: 30%;
+      opacity: 0.16; 
     }
   }
 }
