--- a/public/css/components/1-main/variables.scss
+++ b/public/css/components/1-main/variables.scss
@@ -9,6 +9,7 @@ $black-30: #396373;
 $black-40: #46798c;
 
 $white: #fff;
+$white-1: hsl(198, 100%, 99%);
 
 $lightBlue-10: #f2fbff;
 $lightBlue-20: #e6f8ff;
@@ -31,5 +32,5 @@ $gray-20: #c3d3d9;
 $gray-30: #cfdfe5;
 $gray-40: #e6f8ff;
 
-$font-primary: "Studio Gothic Alternate", sans-serif;
-$font-title: "Current", sans-serif;
+$font-primary: 'Studio Gothic Alternate', sans-serif;
+$font-title: 'Current', sans-serif;
