--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -36,7 +36,7 @@
       }
       .ratioImage {
         position: relative;
-        padding-bottom: 120%;
+        padding-bottom: 100%;
         // -webkit-mask-image: radial-gradient(
         //   ellipse 90% 90% at 50% 50%,
         //   black 10%,
@@ -127,7 +127,7 @@
       color: $primary;
       top: 0;
       right: 30%;
-      opacity: 0.16; 
+      opacity: 0.16;
     }
   }
 }
@@ -430,13 +430,16 @@
     }
     &__bubble {
       &._left {
-        background: $primary;
-        left: -5%;
-        top: -2%;
+        color: $primary;
+        left: 30%;
+        top: 30%;
+        opacity: 0.15;
       }
       &._right {
-        top: 0;
-        right: -10%;
+        bottom: 30%;
+        right: 10%;
+        color: $secondary;
+        opacity: 0.15;
       }
     }
     &__button {
@@ -861,7 +864,7 @@
     padding: 30px 0 80px;
     &__inner {
       flex-direction: column;
-      gap: 60px;
+      gap: 30px;
       &-image {
         order: -1;
         width: 100%;
@@ -1131,7 +1134,7 @@
   .intro {
     padding: 20px 0 60px;
     &__inner {
-      gap: 40px;
+      gap: 0;
       &-content {
         gap: 20px;
       }
