--- a/public/css/components/2-layout/components.scss
+++ b/public/css/components/2-layout/components.scss
@@ -794,17 +794,19 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  width: 12em;
+  height: 1.6em;
+
   cursor: pointer;
   @include transition;
   background: $white;
   img {
-    width: 100%;
+    height: 100%;
+    width: auto;
     object-fit: contain;
   }
   &:hover {
     transform: translateY(-2px);
-    opacity: 0.95;
+    opacity: 0.9;
   }
 }
 .bg {
