--- a/public/css/components/2-layout/header.scss
+++ b/public/css/components/2-layout/header.scss
@@ -24,12 +24,7 @@
     position: fixed;
     padding: 15px 0;
     transition-duration: 0.25s;
-    background: rgba($white, 0.75);
-
-    &:not(.active) {
-      backdrop-filter: blur(2px);
-      box-shadow: 0 3px 10px rgba($black-20, 0.06);
-    }
+    background: rgba($black-10, 0.23)
   }
 }
 .nav {
