--- a/public/css/components/2-layout/header.scss
+++ b/public/css/components/2-layout/header.scss
@@ -19,12 +19,27 @@
       display: none;
     }
   }
+  &:after {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: 0.1s ease-in;
+    background: rgba($black-10, 0.23);
+    background: linear-gradient(180deg, #00000066 0%, transparent);
+  }
 
   &.sticky {
     position: fixed;
     padding: 15px 0;
     transition-duration: 0.25s;
-    background: rgba($black-10, 0.23)
+    &:after {
+      opacity: 1;
+      transition-duration: 0.35s;
+    }
   }
 }
 .nav {
