--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -1,7 +1,6 @@
 .intro {
   padding: 50px 0 150px;
   min-height: calc(100vh - 110px);
-  min-height: calc(100dvh - 110px);
   display: flex;
   flex-direction: column;
   position: relative;
@@ -88,18 +87,22 @@
 .tools {
   padding: 90px 0;
   position: relative;
+  &__inner {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+  }
   &__row {
     display: flex;
-    flex-wrap: wrap;
-    gap: 26px 35px;
+    font-size: 20px;
+    gap: 1.6em;
+    position: relative;
+
     &-container {
       display: flex;
-      gap: 35px;
-      @include hideScroll;
-      transition: 0.5s linear;
-      &._right {
-        margin: 0 0 0 auto;
-      }
+      gap: inherit;
+      flex-shrink: 0;
+      transition: 2s linear;
     }
     &-item {
       width: 110px;
@@ -109,6 +112,7 @@
       justify-content: center;
       cursor: pointer;
       @include transition;
+
       img {
         width: 100%;
         height: 100%;
@@ -815,7 +819,6 @@
   .intro {
     padding: 50px 0 130px;
     min-height: calc(100vh - 70px);
-    min-height: calc(100dvh - 70px);
     .bg {
       font-size: 16px;
     }
