--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -95,18 +95,29 @@
   &__row {
     display: flex;
     font-size: 20px;
-    gap: 1.6em;
+    height: 5.5em;
+    // gap: 1.6em;
     position: relative;
-
+    mask-image: linear-gradient(
+      90deg,
+      transparent,
+      #000 5%,
+      #000 95%,
+      transparent
+    );
     &-container {
+      position: absolute;
+      right: 0;
       display: flex;
-      gap: inherit;
+      // gap: inherit;
+      gap: 1.6em;
       flex-shrink: 0;
-      transition: 2s linear;
+      min-width: 100%;
+      justify-content: space-between;
+      // transition: 2s linear;
     }
     &-item {
-      width: 110px;
-      min-width: 110px;
+      width: 5.5em;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -133,6 +144,10 @@
       right: 30%;
       opacity: 0.16;
     }
+  }
+  .autoContainer{
+    padding: 0 !important;
+    max-width: 1600px;
   }
 }
 .services {
@@ -501,7 +516,7 @@
         padding-bottom: 125%;
       }
       &:after {
-        content: '';
+        content: "";
         width: 100%;
         height: 100%;
         background: linear-gradient(
@@ -573,7 +588,7 @@
   position: relative;
   padding: 50px 0 0;
   &::after {
-    content: '';
+    content: "";
     width: 100%;
     height: 50%;
     background: $primary-3;
@@ -691,10 +706,7 @@
   .tools {
     padding-bottom: 80px;
     &__row {
-      &-item {
-        width: 90px;
-        min-width: 90px;
-      }
+      font-size: 16px;
     }
   }
   .services {
@@ -826,10 +838,7 @@
   .tools {
     padding-bottom: 70px;
     &__row {
-      &-item {
-        width: 70px;
-        min-width: 70px;
-      }
+      font-size: 12px;
     }
   }
   .services {
@@ -894,10 +903,7 @@
   .tools {
     padding-bottom: 60px;
     &__row {
-      &-item {
-        width: 60px;
-        min-width: 60px;
-      }
+      font-size: 10px;
       &-container {
         gap: 25px;
       }
@@ -1158,10 +1164,7 @@
   .tools {
     padding-bottom: 40px;
     &__row {
-      &-item {
-        width: 50px;
-        min-width: 50px;
-      }
+      font-size: 8px;
       &-container {
         gap: 20px;
       }
