--- a/public/css/components/2-layout/header.scss
+++ b/public/css/components/2-layout/header.scss
@@ -21,15 +21,14 @@
   }
   &:after {
     position: absolute;
-    content: '';
+    content: "";
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     opacity: 0;
     transition: 0.1s ease-in;
-    background: rgba($black-10, 0.23);
-    background: linear-gradient(180deg, #00000066 0%, transparent);
+    background: linear-gradient(180deg, #fff 0%, transparent);
   }
 
   &.sticky {
@@ -37,7 +36,7 @@
     padding: 15px 0;
     transition-duration: 0.25s;
     &:after {
-      opacity: 1;
+      opacity: 0.5;
       transition-duration: 0.35s;
     }
   }
@@ -65,7 +64,7 @@
       line-height: 1;
       transition: 0.3s ease-out;
       &::before {
-        content: '';
+        content: "";
         width: 4px;
         height: 4px;
         border-radius: 50%;
@@ -126,12 +125,12 @@
     transform: translate(-50%, -50%);
   }
   &::before {
-    content: '';
+    content: "";
     top: 0;
     transform: translateX(-50%);
   }
   &::after {
-    content: '';
+    content: "";
     bottom: 0;
     transform: translateX(-50%);
   }
