--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1108,6 +1108,7 @@ svg {
   padding: 98px 0 25px;
   background: #caf7ff;
   position: relative;
+  overflow: hidden;
 }
 .footer__inner {
   display: flex;
@@ -1249,8 +1250,7 @@ svg {
   height: 100%;
   opacity: 0;
   transition: 0.1s ease-in;
-  background: rgba(32, 55, 64, 0.23);
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, transparent);
+  background: linear-gradient(180deg, #fff 0%, transparent);
 }
 .header.sticky {
   position: fixed;
@@ -1258,7 +1258,7 @@ svg {
   transition-duration: 0.25s;
 }
 .header.sticky:after {
-  opacity: 1;
+  opacity: 0.5;
   transition-duration: 0.35s;
 }
 
