--- a/public/css/components/2-layout/footer.scss
+++ b/public/css/components/2-layout/footer.scss
@@ -40,17 +40,21 @@
     }
     &-button {
       display: flex;
-      align-items: center;
       gap: 10px;
       color: $blue-90;
       cursor: pointer;
       .ico {
+        margin-top: 2px;
         color: inherit;
         width: 25px;
         height: 25px;
         transition: unset;
       }
       @include transition;
+      .text{
+        flex: 1;
+        line-height: 1.4;
+      }
       &:hover {
         color: $primary;
       }
