--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -14,7 +14,7 @@
 
 // 3-pages components
 @import "./components/3-pages/index.scss";
+@import "./components/3-pages/login.scss";
 
 // responsive
 @import "./components/2-layout/responsive.scss";
-
