--- a/public/css/components/2-layout/components.scss
+++ b/public/css/components/2-layout/components.scss
@@ -4,6 +4,9 @@
   overflow: hidden;
   min-height: 100%;
   padding-top: 110px;
+  &--sm{
+    padding-top: unset !important;
+  }
 }
 .autoContainer {
   max-width: 1448px;
@@ -56,7 +59,7 @@
 
         &:after {
           color: inherit;
-          content: '';
+          content: "";
           position: absolute;
           display: block;
           top: 50%;
@@ -150,6 +153,20 @@
       }
     }
   }
+  &__outer {
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8em;
+    label {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 20px;
+    }
+  }
 }
 .button {
   cursor: pointer;
@@ -159,6 +176,7 @@
   padding: 0.85em 1.7em;
   border: 1px solid transparent;
 
+  font-family: $font-primary;
   color: $black-10;
   font-style: normal;
   font-weight: 400;
@@ -318,7 +336,7 @@
     height: 100%;
 
     &::after {
-      content: '';
+      content: "";
       position: absolute;
       display: block;
       top: 0;
@@ -329,7 +347,7 @@
       box-sizing: border-box;
     }
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       display: block;
       top: 40%;
@@ -379,7 +397,7 @@
 
   &--left {
     &::before {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 50%;
@@ -394,7 +412,7 @@
   }
   &--rtArr {
     &:after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 50%;
@@ -407,7 +425,7 @@
       transform: translate(-50%, -50%);
     }
     &::before {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 50%;
@@ -420,7 +438,7 @@
   }
   &--right {
     &::before {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 50%;
@@ -435,7 +453,7 @@
   }
   &--up {
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       display: block;
       top: 50%;
@@ -449,7 +467,7 @@
   }
   &--down {
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       display: block;
       top: 50%;
@@ -464,7 +482,7 @@
   &--cross {
     &:before,
     &:after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 50%;
@@ -484,7 +502,7 @@
     margin-right: 5px;
 
     &:after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 50%;
@@ -505,7 +523,7 @@
     transition: 0.2s ease-in;
     &:before,
     &:after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       top: 0;
@@ -597,7 +615,7 @@
       &:before,
       &:after {
         position: absolute;
-        content: '';
+        content: "";
         top: 50%;
         left: 0;
         width: 50%;
@@ -735,7 +753,7 @@
       border-radius: 2em;
       // background: $blue-3;
       &::after {
-        content: '';
+        content: "";
         width: calc(100% - 4px);
         height: calc(100% - 4px);
         border: 2px solid $black-10;
@@ -748,7 +766,7 @@
       }
       &::before {
         position: absolute;
-        content: '';
+        content: "";
         height: 1.55em;
         width: 1.55em;
         left: 0.333em;
