--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  background: $white;
   &__inner {
     margin: auto 0;
     display: flex;
@@ -26,7 +27,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: calc(52% - 15px);
+      width: calc(52% - 30px);
       max-width: 600px;
       mix-blend-mode: darken;
       img {
@@ -35,17 +36,17 @@
       }
       .ratioImage {
         position: relative;
-        padding-bottom: 100%;
+        padding-bottom: 90%;
         // -webkit-mask-image: radial-gradient(
         //   ellipse 90% 90% at 50% 50%,
         //   black 10%,
         //   transparent 50%
         // );
-        mask-image: radial-gradient(
-          ellipse 90% 90% at 50% 50%,
-          black 45%,
-          transparent 56%
-        );
+        // mask-image: radial-gradient(
+        //   ellipse 90% 90% at 50% 50%,
+        //   black 45%,
+        //   transparent 56%
+        // );
 
         // &:after {
         //   position: absolute;
@@ -72,6 +73,7 @@
     flex: 1;
   }
   .bg {
+    display: none;
     &__circle {
       left: -37%;
       top: -64%;
@@ -877,12 +879,12 @@
     &__inner {
       position: relative;
       flex-direction: column;
-      gap: 30px;
+      gap: 40px;
       &-image {
         order: -1;
         width: 100%;
         max-width: 500px;
-        margin: 0 auto -20% auto;
+        margin: 0 auto 0% auto;
       }
       &-content {
         width: 100%;
@@ -1145,10 +1147,6 @@
   .intro {
     padding: 20px 0 60px;
     &__inner {
-      gap: 0;
-      &-image {
-        margin-top: -30px;
-      }
       &-content {
         gap: 20px;
       }
