--- a/public/css/main.css
+++ b/public/css/main.css
@@ -259,6 +259,9 @@ svg {
   min-height: 100%;
   padding-top: 110px;
 }
+.main--sm {
+  padding-top: unset !important;
+}
 
 .autoContainer {
   max-width: 1448px;
@@ -398,6 +401,20 @@ svg {
 .input--secondary textarea:focus {
   border-color: #47b3e4;
 }
+.input__outer {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8em;
+}
+.input__outer label {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
 
 .button {
   cursor: pointer;
@@ -406,6 +423,7 @@ svg {
   justify-content: center;
   padding: 0.85em 1.7em;
   border: 1px solid transparent;
+  font-family: "Studio Gothic Alternate", sans-serif;
   color: #203740;
   font-style: normal;
   font-weight: 400;
@@ -1388,6 +1406,7 @@ svg {
   display: flex;
   flex-direction: column;
   position: relative;
+  background: #fff;
 }
 .intro__inner {
   margin: auto 0;
@@ -1412,7 +1431,7 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: calc(52% - 15px);
+  width: calc(52% - 30px);
   max-width: 600px;
   mix-blend-mode: darken;
 }
@@ -1422,8 +1441,7 @@ svg {
 }
 .intro__inner-image .ratioImage {
   position: relative;
-  padding-bottom: 100%;
-  mask-image: radial-gradient(ellipse 90% 90% at 50% 50%, black 45%, transparent 56%);
+  padding-bottom: 90%;
 }
 .intro__inner-image .ratioImage > div {
   position: absolute !important;
@@ -1434,6 +1452,9 @@ svg {
   display: flex;
   flex-direction: column;
   flex: 1;
+}
+.intro .bg {
+  display: none;
 }
 .intro .bg__circle {
   left: -37%;
@@ -1952,6 +1973,133 @@ svg {
   border-color: #33867a;
 }
 
+.login {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  padding: 50px 0;
+}
+.login__inner {
+  width: 100%;
+  margin: auto;
+}
+.login__inner-row {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.login__inner-video {
+  width: calc(50% - 20px);
+}
+.login__inner-video .ratioImage {
+  padding-bottom: 70%;
+}
+.login__inner-video .ratioImage img,
+.login__inner-video .ratioImage video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.login__form {
+  display: none;
+  flex-direction: column;
+  width: calc(50% - 20px);
+  max-width: 500px;
+  margin: 0 auto;
+  font-size: 20px;
+  gap: 1.3em;
+}
+.login__form-box {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+.login__form-devider {
+  position: relative;
+  display: flex;
+}
+.login__form-devider span {
+  margin: 0 auto;
+  padding: 0 10px;
+  z-index: 1;
+  background: #fff;
+}
+.login__form-devider::before {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: #203740;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0.3;
+}
+.login__form .button .ico img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.login__form .button--border {
+  border-width: 1px;
+  gap: 1em;
+}
+.login__form .button--border:hover {
+  background: #e6f8ff;
+  color: #47b3e4;
+}
+.login__form .button--text {
+  position: relative;
+}
+.login__form .button--text:after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  position: absolute;
+  top: calc(100% + 2px);
+  left: 0;
+  background: currentColor;
+}
+.login__form .input input {
+  background: transparent;
+  border-color: #47b3e4;
+  padding: 1.12em 1.2em 0.92em;
+  border-radius: 0.5em;
+}
+.login__form .input input:focus {
+  border-color: #007eac;
+}
+.login__form h5 {
+  font-weight: 600;
+}
+.login__form-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  text-align: center;
+  font-size: 18px;
+}
+.login__form-text p {
+  line-height: 1;
+}
+.login__form.active {
+  display: flex;
+  animation-name: fadeInUp;
+  animation-duration: 0.4s;
+}
+.login .autoContainer {
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  max-width: 1320px;
+}
+
 @media (max-width: 1380px) {
   .services__item._lg {
     padding: 38px 30px;
@@ -2327,13 +2475,13 @@ svg {
   .intro__inner {
     position: relative;
     flex-direction: column;
-    gap: 30px;
+    gap: 40px;
   }
   .intro__inner-image {
     order: -1;
     width: 100%;
     max-width: 500px;
-    margin: 0 auto -20% auto;
+    margin: 0 auto 0% auto;
   }
   .intro__inner-content {
     width: 100%;
@@ -2409,6 +2557,21 @@ svg {
     flex-direction: row;
     flex-wrap: wrap;
   }
+  .login__inner-row {
+    gap: 20px;
+  }
+  .login__inner-video {
+    width: calc(50% - 10px);
+  }
+  .login__form {
+    width: calc(50% - 10px);
+  }
+  .login .input input {
+    padding: 1em 1.2em 0.8em;
+  }
+  .login .input__outer {
+    font-size: 16px;
+  }
 }
 @media (max-width: 768px) {
   .autoContainer {
@@ -2467,6 +2630,24 @@ svg {
   .footer .bg__circle {
     top: 38%;
     right: -80%;
+  }
+  .login {
+    padding: 30px 0;
+  }
+  .login__inner-row {
+    flex-direction: column;
+    max-width: 650px;
+    margin: 0 auto;
+  }
+  .login__inner-video {
+    width: 100%;
+    max-width: 560px;
+    margin: 0 auto;
+  }
+  .login__form {
+    width: 100%;
+    font-size: 16px;
+    max-width: unset;
   }
 }
 @media (max-width: 640px) {
@@ -2638,12 +2819,6 @@ svg {
   }
   .intro {
     padding: 20px 0 60px;
-  }
-  .intro__inner {
-    gap: 0;
-  }
-  .intro__inner-image {
-    margin-top: -30px;
   }
   .intro__inner-content {
     gap: 20px;
