--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -37,16 +37,16 @@
       .ratioImage {
         position: relative;
         padding-bottom: 90%;
-        // -webkit-mask-image: radial-gradient(
-        //   ellipse 90% 90% at 50% 50%,
-        //   black 10%,
-        //   transparent 50%
-        // );
-        // mask-image: radial-gradient(
-        //   ellipse 90% 90% at 50% 50%,
-        //   black 45%,
-        //   transparent 56%
-        // );
+        -webkit-mask-image: radial-gradient(
+          ellipse 90% 90% at 50% 50%,
+          black 10%,
+          transparent 50%
+        );
+        mask-image: radial-gradient(
+          ellipse 90% 90% at 50% 50%,
+          black 45%,
+          transparent 56%
+        );
 
         // &:after {
         //   position: absolute;
@@ -147,7 +147,7 @@
       opacity: 0.16;
     }
   }
-  .autoContainer{
+  .autoContainer {
     padding: 0 !important;
     max-width: 1600px;
   }
