--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1442,6 +1442,8 @@ svg {
 .intro__inner-image .ratioImage {
   position: relative;
   padding-bottom: 90%;
+  -webkit-mask-image: radial-gradient(ellipse 90% 90% at 50% 50%, black 10%, transparent 50%);
+  mask-image: radial-gradient(ellipse 90% 90% at 50% 50%, black 45%, transparent 56%);
 }
 .intro__inner-image .ratioImage > div {
   position: absolute !important;
