--- a/public/css/components/3-pages/index.scss
+++ b/public/css/components/3-pages/index.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background: $white;
   &__inner {
     margin: auto 0;
     display: flex;
@@ -311,13 +310,14 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 28px;
+      gap: 20px;
       z-index: 1;
-      padding: 1.2em 1.6em 0.9em 2.4em;
+      padding: 0.9em 1em 0.4em 1.9em;
     }
     &-arrow {
-      width: 1.5em;
-      height: 1.5em;
+      width: 2.5em;
+      height: 2.5em;
+      padding: 0.5em;
       display: flex;
       align-items: center;
       justify-content: center;
