--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1406,7 +1406,6 @@ svg {
   display: flex;
   flex-direction: column;
   position: relative;
-  background: #fff;
 }
 .intro__inner {
   margin: auto 0;
@@ -1659,13 +1658,14 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 28px;
+  gap: 20px;
   z-index: 1;
-  padding: 1.2em 1.6em 0.9em 2.4em;
+  padding: 0.9em 1em 0.4em 1.9em;
 }
 .testimonials__slider-arrow {
-  width: 1.5em;
-  height: 1.5em;
+  width: 2.5em;
+  height: 2.5em;
+  padding: 0.5em;
   display: flex;
   align-items: center;
   justify-content: center;
