--- a/public/css/components/3-pages/login.scss
+++ b/public/css/components/3-pages/login.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   background: $white;
   padding: 50px 0;
+  overflow: hidden;
   &__inner {
     width: 100%;
     margin: auto;
@@ -13,7 +14,21 @@
       align-items: center;
     }
     &-video {
-      width: calc(50% - 20px);
+      width: 36%;
+      max-width: 450px;
+      position: relative;
+      &:before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        width: 50vw;
+        height: 120vh;
+        background: linear-gradient(45deg, #47b3e45c, transparent);
+        transform: translateY(-50%);
+        box-shadow: inset -3px 0 6px #20374014;
+      }
       .ratioImage {
         padding-bottom: 70%;
         img,
@@ -24,6 +39,7 @@
           width: 100%;
           height: 100%;
           object-fit: contain;
+          mix-blend-mode: darken;
         }
       }
     }
@@ -60,7 +76,6 @@
         left: 50%;
         transform: translate(-50%, -50%);
         opacity: 0.3;
-
       }
     }
     .button {
@@ -97,7 +112,6 @@
         background: transparent;
         border-color: $primary;
         padding: 1.12em 1.2em 0.92em;
-        border-radius: 0.5em;
         &:focus {
           border-color: $primary-2;
         }
@@ -128,7 +142,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    max-width: 1320px;
+    max-width: unset;
   }
 }
 
@@ -139,7 +153,7 @@
         gap: 20px;
       }
       &-video {
-        width: calc(50% - 10px);
+        width: 40%;
       }
     }
     &__form {
@@ -169,6 +183,9 @@
         width: 100%;
         max-width: 560px;
         margin: 0 auto;
+        &::before {
+          display: none;
+        }
       }
     }
     &__form {
