--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1660,7 +1660,7 @@ svg {
   justify-content: center;
   gap: 20px;
   z-index: 1;
-  padding: 0.9em 1em 0.4em 1.9em;
+  padding: 0.9em 1.1em 0.4em 2em;
 }
 .testimonials__slider-arrow {
   width: 2.5em;
@@ -1981,6 +1981,7 @@ svg {
   flex-direction: column;
   background: #fff;
   padding: 50px 0;
+  overflow: hidden;
 }
 .login__inner {
   width: 100%;
@@ -1992,7 +1993,21 @@ svg {
   align-items: center;
 }
 .login__inner-video {
-  width: calc(50% - 20px);
+  width: 36%;
+  max-width: 450px;
+  position: relative;
+}
+.login__inner-video:before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  width: 50vw;
+  height: 120vh;
+  background: linear-gradient(45deg, rgba(71, 179, 228, 0.3607843137), transparent);
+  transform: translateY(-50%);
+  box-shadow: inset -3px 0 6px rgba(32, 55, 64, 0.0784313725);
 }
 .login__inner-video .ratioImage {
   padding-bottom: 70%;
@@ -2005,6 +2020,7 @@ svg {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  mix-blend-mode: darken;
 }
 .login__form {
   display: none;
@@ -2070,7 +2086,6 @@ svg {
   background: transparent;
   border-color: #47b3e4;
   padding: 1.12em 1.2em 0.92em;
-  border-radius: 0.5em;
 }
 .login__form .input input:focus {
   border-color: #007eac;
@@ -2099,7 +2114,7 @@ svg {
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 1320px;
+  max-width: unset;
 }
 
 @media (max-width: 1380px) {
@@ -2563,7 +2578,7 @@ svg {
     gap: 20px;
   }
   .login__inner-video {
-    width: calc(50% - 10px);
+    width: 40%;
   }
   .login__form {
     width: calc(50% - 10px);
@@ -2645,6 +2660,9 @@ svg {
     width: 100%;
     max-width: 560px;
     margin: 0 auto;
+  }
+  .login__inner-video::before {
+    display: none;
   }
   .login__form {
     width: 100%;
