--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1989,6 +1989,7 @@ svg {
   flex-direction: column;
   background: #fff;
   padding: 50px 0;
+  position: relative;
   overflow: hidden;
 }
 .login__inner {
@@ -2030,6 +2031,10 @@ svg {
   object-fit: contain;
   mix-blend-mode: darken;
 }
+.login__inner-space {
+  width: 36%;
+  max-width: 450px;
+}
 .login__form {
   display: none;
   flex-direction: column;
@@ -2038,6 +2043,7 @@ svg {
   margin: 0 auto;
   font-size: 20px;
   gap: 1.3em;
+  z-index: 1;
 }
 .login__form-box {
   display: flex;
@@ -2116,6 +2122,19 @@ svg {
   display: flex;
   animation-name: fadeInUp;
   animation-duration: 0.4s;
+}
+.login__bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+}
+.login__bg-particles {
+  width: 35%;
+  max-width: 500px;
+  background: linear-gradient(45deg, rgba(71, 179, 228, 0.3607843137), transparent);
 }
 .login .autoContainer {
   width: 100%;
@@ -2591,6 +2610,9 @@ svg {
   .login__inner-video {
     width: 40%;
   }
+  .login__inner-space {
+    width: 40%;
+  }
   .login__form {
     width: calc(50% - 10px);
   }
@@ -2599,6 +2621,9 @@ svg {
   }
   .login .input__outer {
     font-size: 16px;
+  }
+  .login__bg-particles {
+    width: 40%;
   }
 }
 @media (max-width: 768px) {
@@ -2677,8 +2702,12 @@ svg {
   }
   .login__form {
     width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
     font-size: 16px;
-    max-width: unset;
+  }
+  .login__bg {
+    display: none;
   }
 }
 @media (max-width: 640px) {
