--- a/public/css/components/3-pages/login.scss
+++ b/public/css/components/3-pages/login.scss
@@ -154,6 +154,7 @@
       width: 35%;
       max-width: 500px;
       background: linear-gradient(45deg, #47b3e45c, transparent);
+      box-shadow: inset -5px 0 6px rgba(0, 0, 0, 0.1);
     }
   }
   .autoContainer {
