--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1742,19 +1742,20 @@ svg {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 10px;
+  gap: 14px;
 }
 .testimonials__item-ico {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 2.66em;
+  width: 7em;
   height: 2.44em;
 }
 .testimonials__item-ico img {
   width: 100%;
   height: 100%;
   object-fit: contain;
+  object-position: left;
 }
 .testimonials__item-info {
   display: flex;
@@ -2135,6 +2136,7 @@ svg {
   width: 35%;
   max-width: 500px;
   background: linear-gradient(45deg, rgba(71, 179, 228, 0.3607843137), transparent);
+  box-shadow: inset -5px 0 6px rgba(0, 0, 0, 0.1);
 }
 .login .autoContainer {
   width: 100%;
