--- a/public/css/components/2-layout/components.scss
+++ b/public/css/components/2-layout/components.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
   min-height: 100%;
   padding-top: 110px;
-  &--sm{
+  &--sm {
     padding-top: unset !important;
   }
 }
@@ -59,7 +59,7 @@
 
         &:after {
           color: inherit;
-          content: "";
+          content: '';
           position: absolute;
           display: block;
           top: 50%;
@@ -336,7 +336,7 @@
     height: 100%;
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       display: block;
       top: 0;
@@ -347,7 +347,7 @@
       box-sizing: border-box;
     }
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       display: block;
       top: 40%;
@@ -397,7 +397,7 @@
 
   &--left {
     &::before {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 50%;
@@ -412,7 +412,7 @@
   }
   &--rtArr {
     &:after {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 50%;
@@ -425,7 +425,7 @@
       transform: translate(-50%, -50%);
     }
     &::before {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 50%;
@@ -438,7 +438,7 @@
   }
   &--right {
     &::before {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 50%;
@@ -453,7 +453,7 @@
   }
   &--up {
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       display: block;
       top: 50%;
@@ -467,7 +467,7 @@
   }
   &--down {
     &::before {
-      content: "";
+      content: '';
       position: absolute;
       display: block;
       top: 50%;
@@ -482,7 +482,7 @@
   &--cross {
     &:before,
     &:after {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 50%;
@@ -502,7 +502,7 @@
     margin-right: 5px;
 
     &:after {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 50%;
@@ -523,7 +523,7 @@
     transition: 0.2s ease-in;
     &:before,
     &:after {
-      content: "";
+      content: '';
       display: block;
       position: absolute;
       top: 0;
@@ -615,7 +615,7 @@
       &:before,
       &:after {
         position: absolute;
-        content: "";
+        content: '';
         top: 50%;
         left: 0;
         width: 50%;
@@ -753,7 +753,7 @@
       border-radius: 2em;
       // background: $blue-3;
       &::after {
-        content: "";
+        content: '';
         width: calc(100% - 4px);
         height: calc(100% - 4px);
         border: 2px solid $black-10;
@@ -766,7 +766,7 @@
       }
       &::before {
         position: absolute;
-        content: "";
+        content: '';
         height: 1.55em;
         width: 1.55em;
         left: 0.333em;
@@ -934,6 +934,24 @@
       object-fit: cover;
     }
   }
+}
+.dflex {
+  display: flex;
+  align-items: center;
+  gap: 0.8em;
+}
+.icolink {
+  display: flex;
+  font-size: 16px;
+  padding: 0.25em;
+}
+.fixedlogo {
+  position: fixed;
+  top: 1.5rem;
+  left: 1.5rem;
+  font-size: 16px;
+  opacity: 1;
+  z-index: 3;
 }
 @mixin components-1160 {
   .main {
