--- a/public/css/components/3-pages/login.scss
+++ b/public/css/components/3-pages/login.scss
@@ -19,7 +19,7 @@
       max-width: 450px;
       position: relative;
       &:before {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 50%;
@@ -73,7 +73,7 @@
         background: $white;
       }
       &::before {
-        content: "";
+        content: '';
         width: 100%;
         height: 1px;
         background: $black-10;
@@ -103,7 +103,7 @@
       &--text {
         position: relative;
         &:after {
-          content: "";
+          content: '';
           width: 100%;
           height: 1px;
           position: absolute;
@@ -153,7 +153,7 @@
     &-particles {
       width: 35%;
       max-width: 500px;
-      background: linear-gradient(45deg, #47b3e45c, transparent);
+      background: linear-gradient(45deg, rgba(#47b3e4, 0.15), transparent);
       box-shadow: inset -5px 0 6px rgba(0, 0, 0, 0.1);
     }
   }
@@ -244,13 +244,13 @@
         mask-image: radial-gradient(
           ellipse 90% 90% at 50% 50%,
           black 45%,
-          transparent 56%
+          transparent 65%
         );
         & > div {
           position: absolute;
           width: 100% !important;
           height: 100% !important;
-         }
+        }
       }
     }
   }
